New classes added

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <a class="btn alt-btn" href="register.html">Register Now</a>
       </section>
       <section class="row">
-        <div class="grid">
+        <div class="grid grid-index">
           <section class="teaser col-1-3">
             <h5>Speakers</h5>
             <a href="speakers.html">
