--- a/schedule.html
+++ b/schedule.html
@@ -40,7 +40,7 @@
     </header>
     <!-- intro -->
     <section class="row-alt">
-      <div class="container intro intro-schedule">
+      <div class="container intro intro-schedule intro-margin ">
         <h1>Schedule</h1>
         <p>
           The conference opens with amazing workshops and continues with two
@@ -49,8 +49,8 @@
         </p>
       </div>
     </section>
-    <section class="row">
-      <div class="container">
+    <section class="row row-schedule">
+      <div class="container grid-schedule">
         <table>
           <!--Table one-->
           <thead>
