--- a/venue.html
+++ b/venue.html
@@ -38,7 +38,7 @@
     </header>
     <!-- Intro -->
     <section class="row-alt">
-      <div class="container intro">
+      <div class="container intro intro-margin ">
         <h1>Venue</h1>
         <p>
           The conference is held at The Kushiara International Convention Hall,
