--- a/register.html
+++ b/register.html
@@ -41,7 +41,7 @@
 
     <!-- Intro -->
     <section class="row-alt">
-      <div class="intro container">
+      <div class="intro intro-margin container">
         <h1>Register</h1>
         <p>
           Every year we aim to have an unbelievable time, and this year
@@ -53,7 +53,7 @@
 
     <!-- main content -->
     <section class="row">
-      <div class="grid">
+      <div class="grid grid-register">
         <section class="why col-2-3">
           <h2>Purchase a Conference Pass</h2>
           <h5>৳999 per Pass</h5>
